themes/custom/kalmanhosszu/style.css
body {
  margin: 0;
  padding: 0;
  font-family: Arial;
  font-size: 12px;
  color: #666666;
  background-color: #F1F7FA;
}

/* STYLES */
h1, h2, h3 {
  font-family: Trebuchet MS;
  text-decoration: none;
}

h1 {
  color: #EB6520;
  font-size: 24px;
}

h2, h2 a, h2 a:visited {
  font-size: 20px;
  color: #0066CC;
}

h3 {
  font-size: 17px;
  color: #003366;
}

ul, ol {
  color: #66FF00;
}

ul li, ol li {
  color: #666666;
}

a, a:visited {
  color: #0C92FF;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

blockquote {
  border-left: 1px solid #E1D6C5;
  font-style: italic;
  margin-left: 20px;
  padding-left: 15px;
  color: #957237;
}

#content div.node div.content a:hover {
  text-decoration: none;
  background-color: #B6DEFF;
}

#content div.node div.content img {
  padding: 4px;
  border: 1px solid #70A8FF;
  -moz-box-shadow: 0px 0px 10px #70A8FF;
  -webkit-box-shadow: 0px 0px 10px #70A8FF;
  box-shadow: 0px 0px 10px #70A8FF;
}

div.messages {
  padding: 20px 20px 20px 70px;
  -moz-border-radius:10px;
  -webkit-border-radius:10px;
  border-radius: 10px;
  color: #333333;
  margin: 10px 0px;
}

div.messages ul {
  padding-left: 10px;
}

div.messages.error {
  background: #FFD2D2 url('img/message_error_ico.jpg') no-repeat left top;
  border: 1px solid #FF9393;
}

div.messages.status {
  background: #BFFFBF url('img/message_status_ico.jpg') no-repeat left top;
  border: 1px solid #31FE54;
}

div.messages.warning {
  background: #BFD9FF url('img/message_warning_ico.jpg') no-repeat left top;
  border: 1px solid #64A2FF;
}

.orange_higlight {
  background: #FF5700;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#FF8A00', endColorstr='#FF5700');
  background: -webkit-gradient(linear, left top, left bottom, from(#FF8A00), to(#FF5700));
  background: -moz-linear-gradient(top, #FF8A00, #FF5700);
  padding: 10px;
  color: white;
  border:  1px solid #FFC46A;
}

.blue_highlight {
  padding: 10px;
  color: white;
  background: #0D92FF;
  border: 1px solid #84CDFF;
}

.clear {clear: both;}
.c-l {clear: left;}
.c-r {clear: right;}

/* STRUCT */
#out {
  background: transparent url('img/out_bg.jpg') repeat-y center top;
}

#left_out, #right_out {
  width: 50%;
  position: absolute;
  z-index: 0;
}

#left_out {
  background: #CEDFEA url('img/left_top_bg.jpg') repeat-x left top;
  left: 0px;
}

#left_img_bg {
  float: right;
  margin-right: 480px;
}

#right_out {
  background: #FFFFFF url('img/right_top_bg.jpg') repeat-x left top;
  right: 0px;
}

#right_img_bg {
  float: left;
  margin-left: 480px;
}

#page {
  width: 960px;
  position: relative;
  z-index: 2;
  margin: auto;
  background: #FFFFFF;
}

/* HEADER */
#header_left {
  background: transparent url('img/header_left_bg.jpg') no-repeat left top;
  height: 260px;
  width: 260px;
  float: left;
}

#logo img {
  margin-top: 25px;
}

#social_media {
  padding-top: 30px;
  text-align: center;
}

#social_media a {
  margin-left: 3px;
}

#header_right {
  background: transparent url('img/header_right_bg.jpg') no-repeat left top;
  height: 192px;
  width: 700px;
  float: right;
}

/* SECONDARY LINKS */
#secondary {
  float: right;
  padding-top: 6px;
}

#secondary a {
  text-decoration: none;
  color: #A1D4F0;
}

#secondary li {
  padding: 0px 10px;
  background: transparent url('img/secondary_separator.jpg') no-repeat right top;
}

/* PRIMARY LINKS */
#primary {
  float: right;
  padding-top: 70px;
}

body.secondary_links #primary {
  padding-top: 49px;
}

#primary li {
  background: transparent url('img/primary_separator.jpg') no-repeat right top;
  padding: 50px 15px 30px 15px;
}

#primary li.last, #secondary li.last {
  background: none;
  padding-right: 5px;
}

#primary li.first,  #secondary li.first{
  padding-left: 0px;
}

#primary a {
  font-size: 17px;
  color: white;
  text-decoration: none;
}

/* SEARCH BOX */
#edit-search-theme-form-1 {
  background: transparent url('img/search_input_bg.png') no-repeat left top;
  width: 160px;
  height: 40px;
  border: none;
  padding-left: 15px;
  font-size: 14px;
}

#search-box {
  padding: 170px 0px 0px 435px;
}

body.primary_links #search-box {
  padding-top: 76px;
}

body.secondary_links #search-box {
  padding-top: 147px;
}

body.secondary_links.primary_links #search-box {
  padding-top: 77px;
}

#edit-search-theme-form-1-wrapper {
  float: left;
  margin: 0px;
}

/* LEFT */
#sidebar-left {
  width: 260px;
  float: left;
}

div.sidebar div.block h2 {
  background: transparent url('img/left_region_block_header.jpg') no-repeat left top;
  height: 31px;
  text-transform: uppercase;
  font-size: 18px;
  color: #FFFFFF;
  padding-left: 25px;
  padding-top: 13px;
  font-family: Trebuchet MS;
  margin: 0px;
}

div.sidebar div.block.first h2 {
  background: transparent url('img/left_region_first_block_header.jpg') no-repeat left top;
}

div.sidebar div.block {
  width: 220px;
  margin-left: 19px;
  margin-top: 5px;
}

div.sidebar div.block.first {
  margin-top: 15px;
}

div.sidebar div.block div.content {
  background: #EAF1F6;
  padding: 10px 5px 10px 20px;
  border-right: 1px solid #BBCFDE;
  border-bottom: 1px solid #BBCFDE;
  border-left: 1px solid #BBCFDE;
  -moz-border-radius:0px 0px 10px 10px;
  -webkit-border-radius:0px 0px 10px 10px;
  border-radius: 0px 0px 10px 10px;
  -moz-box-shadow: 0px 0px 10px #BBCFDE;
  -webkit-box-shadow: 0px 0px 10px #BBCFDE;
  box-shadow: 0px 0px 10px #BBCFDE;
}

div.sidebar div.block div.content li {
  /* li stílus módosítás*/
  list-style-type: none;
  margin-left: 0px;
  margin-bottom: 5px;
}

div.sidebar div.block div.content ul {
  padding: 0px;
}

/* MAIN */
#page-title {
  float: left;
  width: 520px;
}

#main {
  margin-top: -40px;
}

body.one-sidebar #main {
  width: 650px;
  float: left;
  margin-left: 50px;
}

#container {
  background: transparent url('img/container_bg.jpg') repeat-y left top;
  height: 100%;
}

#share_links {
  background: #F0F5F9;
  border-bottom: 1px solid #D4E3ED;
  padding: 10px 10px 5px 10px;
  margin: 10px;
  float: right;
  width: 87px;
  text-align: center;
}

#share_links span.FBConnectButton {
  margin-bottom: 5px;
}

/* BREADCRUMB */
div.breadcrumb {
  background: #ECF3F9;
  border-top: 1px solid #DFEAF1;
  color: #85E94D;
  padding: 7px;
}

/* FOOTER */
#footer-wrapper {
  background: #F1F7FA;
  border-top: 1px solid #D5E4ED;
  border-bottom: 1px solid #D5E4ED;
  padding: 15px 0px;
  position: relative;
}

#footer_bottom {
  background: #F1F7FA;
  height: 10px;
  position: relative;
}

#footer_center {
  width: 960px;
  margin: auto;
}

#footer {
  padding-left: 310px;
}

/* NODE DESIGN */
div.links {
  border-top: 1px solid #ECFFD1;
  background: transparent url('img/links_ico.png') no-repeat left top;
  padding: 5px 5px 5px 25px;
}

div.submitted {
  background: #ECFFD1;
  padding: 10px 5px 5px 5px;
  font-size: 11px;
  color: #0D92FF;
}

div.submitted span.ico_img {
  display: block;
  float: left;
  padding-right: 5px;
}

div.submitted span.comment_data, div.submitted span.date_data, div.submitted span.tags_data {
  padding-left: 15px;
  display: block;
  float: left;
}

div.submitted span.tags_data li.first {
  padding-left: 0px;
}

div.submitted span.comment_data, div.submitted span.author_data {
  padding: 0px;
}

div.submitted span.author_data {
  float: right;
  color: #999999;
}

div.node {
  border-bottom: 1px solid #D5E4ED;
  padding-bottom: 10px;
}

/* COMMENTS */
div.comment {
  margin-bottom: 25px;
}

div.comment.even h3 a {
  color: #FF3300;
}

div.comment h3 a, div.comment.author_comment h3 a {
  font-size: 14px;
  color: #333333;
}

div.comment h3 {
  margin: 0px;
  padding: 15px 0px 2px 0px;
}

div.comment.odd h3 {
  background: transparent url('img/comment_odd_header_bg.jpg') repeat-x left top;
}

div.comment.even h3 {
  background: transparent url('img/comment_even_header_bg.jpg') repeat-x left top;
}

div.comment.author_comment h3 {
  background: transparent url('img/comment_author_header_bg.jpg') repeat-x left top;
}

div.comment div.comment_submitted {
  color: #666666;
  font-style: italic;
  margin-bottom: 15px;
}

div.comment.even div.comment_submitted span.comment_username, div.comment.even div.comment_submitted span.comment_username a {
  color: #FF9900;
}

div.comment div.comment_submitted span.comment_username, div.comment div.comment_submitted span.comment_username a {
  color: #0C92FF;
}

div.comment.author_comment {
  background: #D2FFD2;
}

div.comment.author_comment h3, div.comment.author_comment div.comment_submitted, div.comment.author_comment div.content {
  padding-left: 10px;
}

/* ADMIN MENU PATCH */
#admin-menu {
  top: -20px;
}

